<resources>
    <string name="app_name">MediQ</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nik">NIK</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profil">Profil</string>
    <string name="akun">Akun</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="info_lainnya">Info Lainnya</string>
    <string name="bantuan">Bantuan</string>
    <string name="keluar">Keluar</string>
    <string name="title_activity_bantuan">BantuanActivity</string>
    <string name="bantuan_call_tv">Hubungi Call Center Mediq di</string>
    <string name="bantuan_mail_tv">Email ke Mediq Klinik di</string>
    <string name="simpan">Simpan</string>
    <string name="antre">Antre</string>
    <string name="nama_pasien">Nama Pasien</string>
    <string name="bpjs_non_bpjs">BPJS / Non-BPJS</string>
    <string name="daftar_antrian">Daftar Antrian</string>
    <string name="antre_warn">*Pendaftaran antrian Klinik MediQ hanya berlaku untuk hari ini. Anda tidak dapat mendaftar untuk besok.</string>

    <string-array name="gender">
        <item>Pria</item>
        <item>Wanita</item>
    </string-array>

    <string-array name="bpjs">
        <item>BPJS</item>
        <item>Non-BPJS</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tiket_antrian">Tiket Antrian</string>
</resources>