<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editprofil.EditProfilActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_edit_profil_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_500"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_edit_profil_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back_ios_new_rounded"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/text_white" />

        <TextView
            style="@style/body_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profil"
            android:textColor="@color/text_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/pi_edit_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_edit_profil_top_bar"
        app:trackCornerRadius="4dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_edit_profil_top_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/edit_profil_title"
                style="@style/title_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/profil"
                android:textColor="@color/text_black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_edit_profil_title_name"
                style="@style/body_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/nama_lengkap"
                android:textColor="@color/grey_500"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_profil_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_edit_profil_name"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_profil_title_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_edit_profil_name"
                    style="@style/body_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Masukkan nama lengkap"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_edit_profil_title_nik"
                style="@style/body_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/nik"
                android:textColor="@color/grey_500"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_profil_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_edit_profil_nik"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_profil_title_nik">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_edit_profil_nik"
                    style="@style/body_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Masukkan nomor NIK"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_edit_profil_title_email"
                style="@style/body_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/grey_500"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_profil_nik" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_edit_profil_email"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:enabled="false"
                android:focusable="false"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_profil_title_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_edit_profil_email"
                    style="@style/body_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Masukkan email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_edit_profil_title_dob"
                style="@style/body_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tanggal_lahir"
                android:textColor="@color/grey_500"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_profil_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_edit_profil_dob"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:endIconDrawable="@drawable/ic_fi_calendar"
                app:endIconMode="custom"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_profil_title_dob">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_edit_profil_dob"
                    style="@style/body_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="Tanggal Lahir"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_edit_profil_title_alamat"
                style="@style/body_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/alamat"
                android:textColor="@color/grey_500"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_profil_dob" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_edit_profil_alamat"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_profil_title_alamat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_edit_profil_alamat"
                    style="@style/body_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Masukkan alamat"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_edit_profil_title_gender"
                style="@style/body_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/jenis_kelamin"
                android:textColor="@color/grey_500"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_profil_alamat" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_edit_profil_gender"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_profil_title_gender">

                <AutoCompleteTextView
                    android:id="@+id/actv_edit_profil_gender"
                    style="@style/body_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Pilih salah satu"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_edit_profil"
                style="@style/Widget.App.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/simpan"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_profil_gender" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>